--- a/notebooks/test_scope_rl.ipynb
+++ b/notebooks/test_scope_rl.ipynb
@@ -6,26 +6,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "import jax.random as jrandom\n",
+    "import numpy as np\n",
+    "import optax\n",
+    "\n",
+    "from functools import partial\n",
+    "from gym.spaces import Dict, Box\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "sys.path.insert(0, \"..\")\n",
+    "sys.path.insert(0, \"../src\")\n",
+    "\n",
+    "from src.common_models import Model, get_activation\n",
+    "from src.layer_modules import MLPModule\n",
+    "from src.learning_utils import make_update_function\n",
+    "from src.constants import *\n",
+    "\n",
     "from scope_rl.dataset import SyntheticDataset\n",
     "from scope_rl.policy import EpsilonGreedyHead\n",
-    "# import d3rlpy algorithms\n",
+    "\n",
     "from d3rlpy.algos import DoubleDQNConfig\n",
     "from d3rlpy.dataset import create_fifo_replay_buffer\n",
     "from d3rlpy.algos import ConstantEpsilonGreedy\n",
-    "# import rtbgym and gym\n",
+    "\n",
     "import d3rlpy\n",
+    "import dill\n",
     "import os\n",
     "import rtbgym\n",
     "import gym\n",
     "import torch\n",
-    "# random state\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
     "random_state = 12345\n",
     "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dill\n",
-    "\n",
     "offline_dataset_path = \"offline_data-cartpole.dill\"\n",
     "if os.path.isfile(offline_dataset_path):\n",
     "    with open(offline_dataset_path, \"rb\") as f:\n",
@@ -222,34 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "import jax.random as jrandom\n",
-    "import numpy as np\n",
-    "import optax\n",
-    "\n",
-    "from functools import partial\n",
-    "from gym.spaces import Dict, Box\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "import sys\n",
-    "\n",
-    "sys.path.insert(0, \"..\")\n",
-    "sys.path.insert(0, \"../src\")\n",
-    "\n",
-    "from src.common_models import Model, get_activation\n",
-    "from src.layer_modules import MLPModule\n",
-    "from src.learning_utils import make_update_function\n",
-    "from src.constants import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,12 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "lr = 3e-4\n",
-    "num_epochs = 100000\n",
+    "num_epochs = 1000000\n",
     "log_interval = 100\n",
     "batch_size = 32\n",
     "discount_factor = 0.99\n",
@@ -389,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,10 +469,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def make_rg_loss(discount_factor, qf):\n",
+    "    def rg_loss(qf_params, batch):\n",
+    "        all_q_preds, updates = jax.vmap(\n",
+    "            partial(qf.forward, eval=False), in_axes=[0, None, None]\n",
+    "        )(\n",
+    "            qf_params,\n",
+    "            jax.tree_util.tree_map(\n",
+    "                lambda *args: jnp.concatenate(args, axis=0),\n",
+    "                batch[\"observation\"],\n",
+    "                batch[\"next_observation\"],\n",
+    "            ),\n",
+    "            jnp.concatenate(\n",
+    "                (batch[\"action\"], batch[\"next_action\"]),\n",
+    "                axis=0,\n",
+    "            ),\n",
+    "        )\n",
+    "        curr_q_preds, next_q_preds = jnp.split(all_q_preds, 2, axis=1)\n",
+    "\n",
+    "        # Compute min. clipped TD error\n",
+    "        next_vs = next_q_preds\n",
+    "        curr_q_targets = (\n",
+    "            batch[\"reward\"][None]\n",
+    "            + discount_factor * (1 - batch[\"terminal\"][None]) * next_vs\n",
+    "        )\n",
+    "        td_errors = (curr_q_preds - curr_q_targets) ** 2\n",
+    "        return jnp.mean(td_errors), {\n",
+    "            CONST_UPDATES: updates,\n",
+    "        }\n",
+    "\n",
+    "    return jax.jit(rg_loss)\n",
+    "\n",
     "def make_sarsa_loss(discount_factor, qf):\n",
     "    def sarsa_loss(qf_params, batch):\n",
     "        all_q_preds, updates = jax.vmap(\n",
@@ -543,20 +569,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "loss_name = \"sarsa\"\n",
     "# loss_name = \"mc\"\n",
+    "# loss_name = \"rg\"\n",
     "\n",
     "if loss_name == \"sarsa\":\n",
     "    loss_fn = make_sarsa_loss(discount_factor, qf)\n",
     "elif loss_name == \"mc\":\n",
     "    loss_fn = make_mc_loss(discount_factor, qf)\n",
+    "elif loss_name == \"rg\":\n",
+    "    loss_fn = make_rg_loss(discount_factor, qf)\n",
     "else:\n",
     "    raise NotImplementedError\n",
     "step = make_step(loss_fn, make_update_function(qf), optimizers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow_datasets as tfds\n",
+    "from prefetch_generator import BackgroundGenerator\n",
+    "\n",
+    "def get_iter(data_loader):\n",
+    "    loader = iter(data_loader)\n",
+    "    while True:\n",
+    "        try:\n",
+    "            batch = next(loader)\n",
+    "        except StopIteration:\n",
+    "            loader = iter(data_loader)\n",
+    "            batch = next(loader)\n",
+    "\n",
+    "        for k, v in batch.items():\n",
+    "            if hasattr(v, \"numpy\"):\n",
+    "                batch[k] = v.numpy()\n",
+    "        yield jax.device_put(batch)\n",
+    "\n",
+    "train_rets = scan_monte_carlo_returns(\n",
+    "    train_logged_dataset[\"reward\"][..., None],\n",
+    "    train_logged_dataset[\"terminal\"][..., None],\n",
+    "    discount_factor,\n",
+    ")\n",
+    "\n",
+    "def get_batch(seed):\n",
+    "    sample_key = jrandom.PRNGKey(seed)\n",
+    "    epoch_i = 0\n",
+    "    while True:\n",
+    "        sample_key = jrandom.fold_in(sample_key, epoch_i)\n",
+    "        sample_inds = jrandom.randint(\n",
+    "            sample_key,\n",
+    "            shape=(batch_size,),\n",
+    "            minval=0,\n",
+    "            maxval=train_logged_dataset[\"size\"]\n",
+    "        )\n",
+    "\n",
+    "        next_sample_inds = jnp.clip(sample_inds + 1, min=0, max=train_logged_dataset[\"size\"] - 1)\n",
+    "        batch = {\n",
+    "            \"observation\": {\"observation\": train_logged_dataset[\"state\"][sample_inds]},\n",
+    "            \"next_observation\": {\"observation\": train_logged_dataset[\"state\"][next_sample_inds]},\n",
+    "            \"action\": np.eye(train_logged_dataset[\"n_actions\"])[train_logged_dataset[\"action\"][sample_inds]],\n",
+    "            \"next_action\": np.eye(train_logged_dataset[\"n_actions\"])[train_logged_dataset[\"action\"][next_sample_inds]],\n",
+    "            \"reward\": train_logged_dataset[\"reward\"][sample_inds],\n",
+    "            \"terminal\": train_logged_dataset[\"terminal\"][sample_inds],\n",
+    "            \"return\": train_rets[sample_inds][..., None],\n",
+    "        }\n",
+    "\n",
+    "        epoch_i += 1\n",
+    "\n",
+    "        yield batch\n",
+    "\n",
+    "data_iter = BackgroundGenerator(get_iter(get_batch(sample_seed)), max_prefetch=4)\n"
    ]
   },
   {
@@ -569,28 +657,9 @@
     "losses_std = []\n",
     "losses = []\n",
     "\n",
-    "train_rets = scan_monte_carlo_returns(train_logged_dataset[\"reward\"][..., None], train_logged_dataset[\"terminal\"][..., None], discount_factor)\n",
     "for epoch_i in tqdm(range(num_epochs)):\n",
     "    learner_key = jrandom.fold_in(learner_key, epoch_i)\n",
-    "    sample_key = jrandom.fold_in(sample_key, epoch_i)\n",
-    "    sample_inds = jrandom.randint(\n",
-    "        sample_key,\n",
-    "        shape=(batch_size,),\n",
-    "        minval=0,\n",
-    "        maxval=train_logged_dataset[\"size\"]\n",
-    "    )\n",
-    "\n",
-    "    next_sample_inds = jnp.clip(sample_inds + 1, min=0, max=train_logged_dataset[\"size\"] - 1)\n",
-    "    batch = {\n",
-    "        \"observation\": {\"observation\": train_logged_dataset[\"state\"][sample_inds]},\n",
-    "        \"next_observation\": {\"observation\": train_logged_dataset[\"state\"][next_sample_inds]},\n",
-    "        \"action\": np.eye(train_logged_dataset[\"n_actions\"])[train_logged_dataset[\"action\"][sample_inds]],\n",
-    "        \"next_action\": np.eye(train_logged_dataset[\"n_actions\"])[train_logged_dataset[\"action\"][next_sample_inds]],\n",
-    "        \"reward\": train_logged_dataset[\"reward\"][sample_inds],\n",
-    "        \"terminal\": train_logged_dataset[\"terminal\"][sample_inds],\n",
-    "        \"return\": train_rets[sample_inds][..., None],\n",
-    "    }\n",
-    "\n",
+    "    batch = next(data_iter)\n",
     "    model_dict, aux = step(model_dict, batch, learner_key)\n",
     "    losses.append(aux[CONST_AGG_LOSS])\n",
     "\n",
@@ -605,16 +674,6 @@
    "metadata": {},
    "source": [
     "## Plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
    ]
   },
   {
@@ -634,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,48 +707,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_rets = scan_monte_carlo_returns(test_logged_dataset[\"reward\"][..., None], test_logged_dataset[\"terminal\"][..., None], discount_factor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "value_errors = []\n",
-    "batch_i = 0\n",
-    "while True:\n",
-    "    start_ind = batch_i * batch_size\n",
-    "    end_ind = (batch_i + 1) * batch_size\n",
-    "\n",
-    "    sample_inds = np.arange(start_ind, end_ind)\n",
-    "    batch = {\n",
-    "        \"observation\": {\"observation\": test_logged_dataset[\"state\"][sample_inds]},\n",
-    "        \"action\": np.eye(test_logged_dataset[\"n_actions\"])[test_logged_dataset[\"action\"][sample_inds]],\n",
-    "        \"reward\": test_logged_dataset[\"reward\"][sample_inds],\n",
-    "        \"terminal\": test_logged_dataset[\"terminal\"][sample_inds],\n",
-    "        \"return\": test_rets[sample_inds][..., None],\n",
-    "    }\n",
-    "\n",
-    "    q_vals, _ = jax.vmap(\n",
-    "        partial(qf.forward, eval=False), in_axes=[0, None, None]\n",
-    "    )(\n",
-    "        model_dict[CONST_MODEL][CONST_QF],\n",
-    "        batch[\"observation\"],\n",
-    "        batch[\"action\"],\n",
-    "    )\n",
-    "    \n",
-    "    value_error = batch[\"return\"][None] - q_vals\n",
-    "    value_errors.append(value_error)\n",
-    "\n",
-    "    if end_ind >= test_logged_dataset[\"size\"]:\n",
-    "        break\n",
-    "    batch_i += 1"
    ]
   },
   {
@@ -733,6 +755,76 @@
     "    plt.plot(x_axis, batch[\"return\"][:, 0], label=\"GT\")\n",
     "    plt.legend()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value_errors = dict()\n",
+    "\n",
+    "for model_name in [\"rg\", \"mc\", \"sarsa\",]:\n",
+    "    curr_model_dict = dill.load(open(f\"{model_name}.dill\", \"rb\"))\n",
+    "    value_errors[model_name] = []\n",
+    "    for batch_i in tqdm(range(test_logged_dataset[\"size\"] // batch_size)):\n",
+    "        start_ind = batch_i * batch_size\n",
+    "        end_ind = (batch_i + 1) * batch_size\n",
+    "\n",
+    "        sample_inds = np.arange(start_ind, end_ind)\n",
+    "        batch = {\n",
+    "            \"observation\": {\"observation\": test_logged_dataset[\"state\"][sample_inds]},\n",
+    "            \"action\": np.eye(test_logged_dataset[\"n_actions\"])[test_logged_dataset[\"action\"][sample_inds]],\n",
+    "            \"reward\": test_logged_dataset[\"reward\"][sample_inds],\n",
+    "            \"terminal\": test_logged_dataset[\"terminal\"][sample_inds],\n",
+    "            \"return\": test_rets[sample_inds][..., None],\n",
+    "        }\n",
+    "\n",
+    "        q_vals, _ = jax.vmap(\n",
+    "            partial(qf.forward, eval=False), in_axes=[0, None, None]\n",
+    "        )(\n",
+    "            curr_model_dict[CONST_MODEL][CONST_QF],\n",
+    "            batch[\"observation\"],\n",
+    "            batch[\"action\"],\n",
+    "        )\n",
+    "        \n",
+    "        value_error = batch[\"return\"][None] - q_vals\n",
+    "        value_errors[model_name].append(value_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.isfile(\"value_errors.dill\"):\n",
+    "    value_errors = dill.load(open(\"value_errors.dill\", \"rb\"))\n",
+    "else:\n",
+    "    dill.dump(\n",
+    "        value_errors,\n",
+    "        open(\"value_errors.dill\", \"wb\")\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for model_name, curr_value_errors in value_errors.items():\n",
+    "    print(model_name, jnp.mean(jnp.vstack(curr_value_errors) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curr_value_errors"
    ]
   },
   {
